--- a/MyHomeApp/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/MyHomeApp/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -27,7 +27,7 @@
             </span>
           </a>
         </li>
-        <li class="nav-item">
+        <li *ngSwitchCase="true" class="nav-item">
           <a class="nav-link" routerLink="/map" (click)="collapseNavbar()">
             <span>
               <fa-icon icon="map-location-dot"></fa-icon>
